--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,69 @@
         {% endblock %}
     </head>
     <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Vroum / En Y</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{path('app_vroum_general')}}">accueil</a>
+                    </li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        BACKOFFICE
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{{path('admin_vehicules')}}">Administration Vehicules</a></li>
+                        <li><a class="dropdown-item" href="{{path('admin_membres')}}">Administration Membres</a></li>
+                        <li><a class="dropdown-item" href="{{path('admin_commandes')}}">Administration Commandes</a></li>
+                    </ul>
+                    </li>
+                    {% endif %}
+                    {% if app.user %}
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Mon Compte
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{{path('app_profil', {id: app.user.id})}}">Mon profil</a></li>
+                    </ul>
+                    </li>
+                    {% endif %}
+                </ul>
+                <ul class="navbar-nav">
+                {% if app.user %}
+                
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{path('app_logout')}}">déconnexion</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{path('app_login')}}">connexion</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{path('app_register')}}">s'inscrire</a>
+                    </li>
+                {% endif %}
+                </ul>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{path('app_admin')}}" class="nav-link text-danger">BACKOFFICE</a>
+                
+                {% endif %}
+                
+                </div>
+            </div>
+        </nav>
+        <div class="container" style="min-height: 100vh;">
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success text-center">{{ message }}</div>
+        {% endfor %}
         {% block body %}{% endblock %}
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
