--- a/templates/admin/admin_membres.html.twig
+++ b/templates/admin/admin_membres.html.twig
@@ -9,11 +9,9 @@ BackOffice
 <h1>
     BACKOFFICE | Membres
 </h1>
-{% for message in app.flashes('success') %}
-    <div class="alert alert-success text-center">{{ message }}</div>
-{% endfor %}
-<table class="table table-bordered text-center">
-    <thead>
+
+<table class="table table-striped table-hover table-dark text-center">
+    <thead class="table-secondary">
         <tr>
             {% for colonne in colonnes %}
                 {% if colonne != 'roles' and colonne != 'password' %}
@@ -23,8 +21,8 @@ BackOffice
                 {% endif %}
 
             {% endfor %}
-            <th>Editer</th>
-            <th>Suprimer</th>
+            <th>Option</th>
+            
         </tr>
     </thead>
     <tbody>
@@ -40,8 +38,11 @@ BackOffice
 
             <td>{{ membre.dateEnregistrement| date("d/m/Y à H:i:s")}}</td>
             <td>{{ membre.civilite}}</td>
-            <td><a href="{{ path('admin_edit_membre',{id: membre.id}) }}" class="text-dark"><i class="fas fa-edit"></i></a></td>
-            <td><a onclick="return confirm('voulez-vous supprimer ce membre?')" href="{{ path('admin_delete_membre',{id: membre.id}) }}" class="text-dark"><i class="fas fa-trash"></i></a></td>
+            <td>
+                <a href="{{path('admin_show_membre', {id: membre.id}) }}" class="text-success me-3"><i class='fas fa-glasses'></i></a>
+                <a href="{{ path('admin_edit_membre',{id: membre.id}) }}" class="text-light  me-3"><i class="fas fa-edit"></i></a>
+                <a onclick="return confirm('voulez-vous supprimer ce membre?')" href="{{ path('admin_delete_membre',{id: membre.id}) }}" class="text-danger"><i class="fas fa-trash"></i></a>
+            </td>
         </tr>
     {% endfor %}
     </tbody>
@@ -63,6 +64,9 @@ BackOffice
 {{ form_row(formMembre.prenom) }}
 {{ form_row(formMembre.email)}}
 {{ form_row(formMembre.civilite)}}
+
+
+{{ form_row(formMembre.roles)}}
 
 
 
