--- a/templates/admin/admin_vehicules.html.twig
+++ b/templates/admin/admin_vehicules.html.twig
@@ -6,20 +6,17 @@ BackOffice
 
 {% block body %}
 
-{% for message in app.flashes('success') %}
-    <div class="alert alert-success text-center">{{ message }}</div>
-{% endfor %}
-<table class="table table-bordered text-center">
-    <thead>
+
+<table class="table table-striped table-hover table-dark text-center mt-5 mb-5">
+    <thead class="table-secondary">
         <tr>
             {% for colonne in colonnes %}
                 <th>{{ colonne }}</th>
             {% endfor %}
-            <th>Editer</th>
-            <th>Suprimer</th>
+            <th>Option</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="">
     {% for vehicule in vehicules %}
         <tr>
             <td>{{ vehicule.id }}</td>
@@ -30,8 +27,11 @@ BackOffice
             <td><img src="{{ vehicule.photo }}" style="width: 150px;" alt=""></td>
             <td>{{ vehicule.prixJournalier}}</td>
             <td>{{ vehicule.dateEnregistrement|date('d/m/Y à H:i:s') }}</td>
-            <td><a href="{{ path('admin_edit_vehicule',{id: vehicule.id}) }}" class="text-dark"><i class="fas fa-edit"></i></a></td>
-            <td><a onclick="return confirm('voulez-vous supprimer cet vehicule ?')" href="{{ path('admin_delete_vehicule',{id: vehicule.id}) }}" class="text-dark"><i class="fas fa-trash"></i></a></td>
+            <td>
+            <a href="{{path('admin_show_vehicule', {id: vehicule.id}) }}" class="text-success me-3"><i class='fas fa-glasses'></i></a>
+            <a href="{{ path('admin_edit_vehicule',{id: vehicule.id}) }}" class="text-info  me-3"><i class="fas fa-edit"></i></a>
+            <a onclick="return confirm('voulez-vous supprimer cet vehicule ?')" href="{{ path('admin_delete_vehicule',{id: vehicule.id}) }}" class="text-danger"><i class="fas fa-trash"></i></a>
+            </td>
         </tr>
     {% endfor %}
     </tbody>
@@ -50,7 +50,7 @@ BackOffice
 {{form_row(formVehicule.photo)}}
 {{form_row(formVehicule.prix_journalier)}}
 
-<button type="submit" class="btn btn-primary mt-2">
+<button type="submit" class="btn btn-secondary mt-2">
 {% if editMode %}
     Enregistrer les modifications
 {% else %}
