--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,8 +10,10 @@
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+        {{ form_row(registrationForm.nom)}}
+        {{ form_row(registrationForm.prenom) }}
+        {{ form_row(registrationForm.email)}}
+        {{ form_row(registrationForm.civilite)}}
+        <button type="submit" class="btn">s'inscrire</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
