--- a/templates/admin/admin_membres.html.twig
+++ b/templates/admin/admin_membres.html.twig
@@ -17,11 +17,11 @@ BackOffice
                 {% if colonne != 'roles' and colonne != 'password' %}
                 
                 
-                <th>{{ colonne }}</th>
+                <th style="max-width:10vw;">{{ colonne }}</th>
                 {% endif %}
 
             {% endfor %}
-            <th>Option</th>
+            <th style="max-width:10vw;">Option</th>
             
         </tr>
     </thead>
