--- a/templates/admin/admin_vehicules.html.twig
+++ b/templates/admin/admin_vehicules.html.twig
@@ -11,7 +11,7 @@ BackOffice
     <thead class="table-secondary">
         <tr>
             {% for colonne in colonnes %}
-                <th>{{ colonne }}</th>
+                <th style="max-width:10vw;">{{ colonne }}</th>
             {% endfor %}
             <th>Option</th>
         </tr>
