--- a/templates/admin/admin_vehicules.html.twig
+++ b/templates/admin/admin_vehicules.html.twig
@@ -23,7 +23,7 @@ BackOffice
             <td>{{ vehicule.titre}}</td>
             <td>{{ vehicule.marque}}</td>
             <td>{{ vehicule.modele}}</td>
-            <td>{{ vehicule.description}}</td>
+            <td style="max-width: 10vw;">{{ vehicule.description|slice(0, 19) }}....</td>
             <td><img src="{{ vehicule.photo }}" style="width: 150px;" alt=""></td>
             <td>{{ vehicule.prixJournalier}}</td>
             <td>{{ vehicule.dateEnregistrement|date('d/m/Y à H:i:s') }}</td>
