--- a/templates/vroum_general/index.html.twig
+++ b/templates/vroum_general/index.html.twig
@@ -20,7 +20,7 @@
   <div class="card-body text-center">
     <h4 class="card-title"> {{ item.marque }} / {{ item.modele }}</h4>
     <img class="text-center" src="{{ item.photo }}" alt="" width="200px">
-    <p class="card-text"> {{ item.description }} </p>
+    <p class="card-text"> {{ item.description|slice(0, 30) }} ... </p>
     <hr>
     <p>Prix Journalier : {{ item.prixjournalier }} €</p>
 
